# emitter

./: ChangeLog  Emitter.hs  LICENSE  README.md  emitter.cabal
src/Control/: Emitter.hs
test/: Spec.hs
